--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/logo.svg" />    <!--Cambiar por el logo de Huanchaco-->
+    <link rel="icon" type="image/png" href="/logo.png" />    <!--Cambiar por el logo de Huanchaco-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Central de Monitoreo - Municipalidad de Huanchaco</title>
   </head>
